<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/rectangle_city"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/joshua_l_th"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/acme"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="2sp"
        android:text="@string/joshua_l_the_game_in_japan"
        android:textColor="@color/light_gray"
        android:textFontWeight="400"
        android:textSize="12sp"
        android:translationY="-0.77sp"
        android:lineHeight="18dp"
        app:layout_constraintTop_toBottomOf="@id/imageCity"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />
    <TextView
        android:id="@+id/september_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="12dp"
        android:fontFamily="@font/acme"
        android:letterSpacing="0"
        android:text="@string/september_19"
        android:textColor="@color/gray"
        android:textFontWeight="400"
        android:textSize="12sp"
        android:lineHeight="13dp"
        app:layout_constraintTop_toBottomOf="@id/joshua_l_th"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="p" />
</androidx.constraintlayout.widget.ConstraintLayout>