<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acountfragment.AcountFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/jacob_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/allerta"
                android:letterSpacing="-0.02"
                android:lineHeight="21dp"
                android:lineSpacingExtra="2sp"
                android:text="@string/jacob_w"
                android:textColor="@color/light_gray"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:translationY="-0.95sp"
                tools:targetApi="p" />

            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_below="@id/jacob_w"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/profile" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/jacob_w"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/image_profile"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="UselessLeaf">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/statics_54"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/allerta"
                        android:letterSpacing="-0.02"
                        android:lineHeight="21dp"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/_54"
                        android:textColor="@color/light_gray"
                        android:textFontWeight="600"
                        android:textSize="16sp"
                        android:translationY="-0.95sp"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/allerta"
                        android:letterSpacing="-0.01"
                        android:lineHeight="16dp"
                        android:text="@string/posts"
                        android:textColor="@color/light_gray"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        tools:targetApi="p" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/statics_834"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/allerta"
                        android:letterSpacing="-0.02"
                        android:lineHeight="21dp"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/_834"
                        android:textColor="@color/light_gray"
                        android:textFontWeight="600"
                        android:textSize="16sp"
                        android:translationY="-0.95sp"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/allerta"
                        android:letterSpacing="-0.01"
                        android:lineHeight="16dp"
                        android:text="@string/followers"
                        android:textColor="@color/light_gray"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        tools:targetApi="p" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/statics_162"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="32dp"
                        android:fontFamily="@font/allerta"
                        android:letterSpacing="-0.02"
                        android:lineHeight="21dp"
                        android:lineSpacingExtra="2sp"
                        android:text="@string/_162"
                        android:textColor="@color/light_gray"
                        android:textFontWeight="600"
                        android:textSize="16sp"
                        android:translationY="-0.95sp"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/allerta"
                        android:letterSpacing="-0.01"
                        android:lineHeight="16dp"
                        android:text="@string/following"
                        android:textColor="@color/light_gray"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        tools:targetApi="p" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/jacob_west"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_profile"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/allerta"
                android:lineHeight="16dp"
                android:text="@string/jacob_west"
                android:textColor="@color/light_gray"
                android:textFontWeight="600"
                android:textSize="12sp"
                tools:targetApi="p" />

            <RelativeLayout
                android:id="@+id/rel_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/jacob_west">

                <TextView
                    android:id="@+id/digital_goo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/allerta"
                    android:gravity="top"
                    android:lineHeight="16dp"
                    android:lineSpacingExtra="3sp"
                    android:text="@string/digital_goodies"
                    android:textColor="@color/light_gray"
                    android:textFontWeight="400"
                    android:translationY="-1.34sp"
                    tools:targetApi="p" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/rel_lay2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/rel_lay"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/stroke"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/allerta"
                    android:letterSpacing="-0.01"
                    android:lineHeight="18dp"
                    android:lineSpacingExtra="2sp"
                    android:text="@string/edit_profile"
                    android:textColor="@color/light_gray"
                    android:textFontWeight="600"
                    android:textSize="12sp"
                    android:translationY="-1.24sp"
                    tools:targetApi="p" />
            </LinearLayout>
        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rel2"
            android:layout_marginTop="80dp"
            android:background="@drawable/stroke"
            app:tabMode="fixed"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_grid_icon"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_info_shape"
                tools:ignore="ImageContrastCheck" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/tab_layout"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

</FrameLayout>